# msft

./: .gitignore  .gitlab-cli.yml  CHANGELOG.md  Cargo.toml  Makefile.toml
crates/msft/: Cargo.toml  Makefile.toml
crates/msft/examples/: device_events.rs  service.rs  usb.rs
crates/msft/src/: lib.rs
crates/runtime/: Cargo.toml  Makefile.toml
crates/runtime/examples/: timers.rs  usb.rs
crates/runtime/src/: lib.rs
crates/runtime/src/codec/: lines.rs  mod.rs
crates/runtime/src/common/: cleanup.rs  environment.rs  instance.rs  mod.rs
crates/runtime/src/event/: mod.rs
crates/runtime/src/fs/: mod.rs  read.rs  write.rs
crates/runtime/src/futures/: mod.rs  watch.rs
crates/runtime/src/io/: drive.rs  error.rs  futures.rs  handle.rs  mod.rs  overlapped.rs  sink.rs  stream.rs
crates/runtime/src/io/tests/: mod.rs
crates/runtime/src/tests/: event.rs  futures.rs  mod.rs
crates/runtime/src/timer/: mod.rs
crates/runtime/src/usb/: mod.rs  open.rs
crates/runtime/src/wait/: mod.rs
crates/runtime/src/work/: mod.rs
crates/runtime/tests/: mod.rs  work.rs
crates/service/: Makefile.toml  cargo.toml
crates/service-macros/: Cargo.toml  Makefile.toml
crates/service-macros/src/: lib.rs  service.rs
crates/service/examples/: usb.rs  usbscan.rs
crates/service/src/: device.rs  lib.rs  message.rs  status.rs
crates/service/src/util/: guid.rs  hkey.rs  macros.rs  mod.rs  wait.rs  wchar.rs
crates/service/src/util/tests/: mod.rs
