[package]
name = "msft-runtime"
version = "0.0.4"
authors = ["Thomas Chiantia <thomas@altronix.com>"]
keywords = ["windows", "threadpool", "runtime"]
description = "Windows async helpers"
edition = "2021"
license = "MIT"

[dependencies]
# runtime
tokio = { version = "1.32", features = ["full"] }
bytes = "1"
futures = "0.3"
pin-project-lite = "0.2"
crossbeam = "0.8"
parking_lot = "0.12"

# other
bitflags = "2.4"
num-traits = "0.2"
num-derive = "0.4"

# log
tracing = "0.1"
tracing-appender = { version = "0.2", optional = true }
win_etw_macros = { version = "0.1.*", optional = true }
win_etw_provider = { version = "0.1.*", optional = true }
win_etw_tracing = { version = "0.1.*", optional = true }
[dependencies.tracing-subscriber]
version = "0.3"
optional = true
features = [
	"fmt", 
	"chrono",
	"std", 
	"env-filter", 
	"registry", 
	"time"
]

# Windows dependencies
[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
	"Win32_Devices",
	"Win32_Devices_Communication",
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_Security",
	"Win32_Storage_FileSystem",
	"Win32_System_SystemInformation",
	"Win32_System_IO",
	"Win32_System_Kernel",
	"Win32_System_LibraryLoader",
	"Win32_System_Pipes",
	"Win32_System_Power",
	"Win32_System_Registry",
	"Win32_System_Rpc",
	"Win32_System_Services",
	"Win32_System_SystemServices",
	"Win32_System_Threading",
	"Win32_System_RemoteDesktop",
	"Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
mockall = "0.12"
trybuild = "1"
tracing-subscriber = "0.3"
msft-service = "0.0.4" # used in usb example. TODO move to msft/examples

[features]
default = []
bin = [
	"dep:tracing-appender", 
	"dep:tracing-subscriber",
	"dep:win_etw_macros",
	"dep:win_etw_provider",
	"dep:win_etw_tracing",
	"msft-service/bin",
]
